fix blurry email text in email layout

--- a/src/styles/layouts/email.scss
+++ b/src/styles/layouts/email.scss
@@ -5,5 +5,5 @@
     z-index: 99;
     letter-spacing: 2px;
     transform: rotate(90deg);
-    zoom: 1.02;
+    perspective: 1000px;
 }
